# routing-algorithm

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  algo.c  algo.h  dictionary.h  germany_map.csv  germany_map_false.csv  io.c  io.h  main.c  parser.c
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: index.html  userdoc.html
objects/: dictionary.c  dictionary.h  route.c  route.h
src/: main.c
src/logic/: algo.c  algo.h
src/objects/: dictionary.c  dictionary.h  route.c  route.h
src/parsing/: parser.c  parser.h  parser_error_handler.c  parser_error_handler.h
src/reallife_application/: fuel_consumption.c  fuel_consumption.h
